--- a/QuizProjectFrontend/src/App.scss
+++ b/QuizProjectFrontend/src/App.scss
@@ -43,5 +43,33 @@ body {
 }
 
 table {
-  background-color: lightgray;
+	width: 1000px;
+	border-collapse: collapse;
+	box-shadow: 0 0 30px rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,0.6);
+}
+
+th,
+td {
+	padding: 15px;
+	background-color: rgba(255,255,255,0.2);
+	color: #fff;
+}
+
+th {
+	text-align: center;
+}
+
+thead {
+	th {
+		background-color: rgb(58, 58, 163);
+	}
+}
+
+tbody {
+	tr {
+		&:hover {
+			background-color: rgba(255,255,255,0.2);
+		}
+}
 }
